--- a/Individual-Project-pav-main/project-node/src/Css/Project.css
+++ b/Individual-Project-pav-main/project-node/src/Css/Project.css
@@ -22,11 +22,17 @@ height: 250px;
   margin-bottom: 20px;
 }
 .task-input:nth-child(2) {
+  margin-top: 10px;
         grid-row: 2/ span 3;
         grid-column: 1 / span 4;
         vertical-align: top;
+        
 }
 
+.flex1:nth-child(4){
+  grid-column: 5;
+  grid-row: 1;
+}
 .flex1:nth-child(6){
   grid-column: 5;
   grid-row: 1;
@@ -34,6 +40,7 @@ height: 250px;
 .flex1:nth-child(5){
   grid-column: 5;
   grid-row: 4;
+  
 }
 .task-button{
   border-radius: 5px;
