--- a/Individual-Project-pav-main/project-node/src/Css/Home.css
+++ b/Individual-Project-pav-main/project-node/src/Css/Home.css
@@ -26,14 +26,14 @@ body {
   .task-card h2 {
     font-size: 20px;
     font-weight: 700;
-    color: #333333;
+    color: #000000;
     margin-top: 0;
     margin-bottom: 5px;
   }
   
   .task-card p {
     font-size: 14px;
-    color: #666666;
+    color: #000000;
     margin-bottom: 0;
   }
   
@@ -57,14 +57,14 @@ body {
   }
   
   .task-card .details-link:hover {
-    background-color: #3C257C;
+    background-color: #000000;
     color: #FFFFFF;
   }
 .obj-color{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-background-color: #7749F8;
+background-color: #000000;
 color: #FFFFFF;
 margin-top: 10px;
 margin-bottom: 35px;
